--- a/kadai_014.html
+++ b/kadai_014.html
@@ -23,7 +23,7 @@
       <p>O型</p>
     </div>
     <h2 class="blue">趣味</h2>
-    <p>旅行、読書、ゲーム</p>
+    <p>旅行、読書、ゲームaaa</p>
     <h2 class="pink">好きな食べ物</h2>
     <p>ハンバーグ、きつねうどん、抹茶アイス</p>
     <h2 class="blue">プログラミングを始めた理由</h2>
